--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "homepage": "https://github.com/nain333/placement-cell#readme",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "connect-mongo": "^3.2.0",
+    "connect-mongodb-session": "^3.1.1",
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
